# go-music-dl

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  flake.nix  go.mod  go.sum  package.bat  package_app.bat  package_go.bat  run.bat  run.sh  test_import.txt
.github/scripts/: inject_android_ffmpeg.ps1  verify_android_ffmpeg_apk.ps1
.github/workflows/: docker.yml  gomod2nix.yml  nightly.yml  pull.yml  push.yml  release.yml
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
cmd/music-dl/: root.go  web.go
cmd/search-server/: main.go
core/: audio_ext_test.go  config_store.go  download.go  download_record.go  import_pipeline_test.go  netease_download_integration_test.go  service.go  service_metadata_test.go  version.go
desktop/: Cargo.toml  README.md  build.rs  index.html  music-dl.desktop
desktop/src/: main.rs
desktop_app/: bundled_ffmpeg_android.go  bundled_ffmpeg_config.go  bundled_ffmpeg_config_test.go  main.go  music-dl.apk.idsig
desktop_go/: app.desktop  webview_other.go  webview_windows.go
internal/cli/: handler.go  ui.go
internal/web/: collection.go  local_music.go  local_music_test.go  lyric_test.go  media_session_test.go  music.go  search_type_test.go  server.go
internal/web/templates/: index.html  style.css  videogen.html  videogen.js
internal/web/templates/pages/: index.html
internal/web/templates/partials/: modals.html  search_box.html  song_list.html
internal/web/templates/static/css/: style.css
internal/web/templates/static/js/: app.js
pkg/models/: song.go
winres/: init.go  winres.json
