[package]
name = "go-music-dl-desktop"
version = "0.1.0"
edition = "2024"
# --- 必须添加以下字段才能打包 Linux ---
license = "AGPL-3.0"   # 或者 "MIT", "Apache-2.0" 等
description = "A desktop GUI for music-dl"
authors = ["guohuiyuan"]
repository = "https://github.com/guohuiyuan/go-music-dl"
# --------------------------------------

[dependencies]
tao = "0.30"
wry = "0.42"
image = "0.25"

[build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "guohuiyuan"
copyright = "2026, guohuiyuan"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/go-music-dl-desktop", "usr/bin/music-dl-desktop", "755"],
    # 注意：这里不需要单独复制 Go binary，因为 rust 已经把它 embed 进去了
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/go-music-dl-desktop", dest = "/usr/bin/music-dl-desktop", mode = "755" }
]